// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConnectionStatusBanner > should render ConnectionStatusBanner with connected status 1`] = `
<div>
  <div
    class="connectionStatusBanner"
  >
    <button
      class="banner success"
      id="status"
      name="status"
      type="button"
    >
      Connected
    </button>
  </div>
</div>
`;

exports[`ConnectionStatusBanner > should render ConnectionStatusBanner with reconnecting failed status 1`] = `
<div>
  <div
    class="connectionStatusBanner"
  >
    <button
      class="banner error"
      id="status"
      name="status"
      type="button"
    >
      Reconnecting failed...
    </button>
  </div>
</div>
`;

exports[`ConnectionStatusBanner > should render ConnectionStatusBanner with reconnecting status 1`] = `
<div>
  <div
    class="connectionStatusBanner"
  >
    <button
      class="banner warning"
      id="status"
      name="status"
      type="button"
    >
      Reconnecting...
    </button>
  </div>
</div>
`;
